	* [Bug] Forgot to prefix an Exception with the root namespace.
	* [Performance] Optimize the performance of Core::VersionSplit.
	* [Performance] Optimize some of the Core javascript a bit.
	* [Performance] New support for an asset version for better cache control.
	* [Performance] Optimize the admin bar logic slightly.
	* [Feature] FilterForm supports a 'dateformat' attribute.
	* [Feature] Minify the the admin configuration page a bit more.
	* Switch the userconfig install directive to use the new default fields.
	* Config to FormElement is abstracted into its own function.
	* View is more self-contained and less static.
	* New methods, \Core\page_request and \Core\view.
	* Remove the /core/filestore/previews option as this is no longer used anywhere.
	* Remove an unnecessary file from a legacy naming convention.
	* Error pages are a little more professional reading.
	* Resolve Link gracefully handles controllers that cannot be resolved.
	* Need to use version_compare for the changelog sorting.
	* Group the radio options in a common div.
	* Set a few defaults for datetime type form fields.
	* DateTime form elements support displayformat and saveformat as parameters.
	* Switched the private method getEntriesSorted to public.
	* Add a getPreviousSection method on the changelog parser.
	* Standardized the order of returning changelog entries.
	* Changelog sections properly ignore duplicate entries.

Core Plus 2.6.0

	* [Bug] Minor bug in the updater template.  Needed to use version_compare instead of "<="
	* [Bug] The "disabled" form attribute is now better handled on both the renderer and the parser.
	* [Bug] Moved component include installation directives to a separate method so that they won't
	  interferre with the installation variables!
	* [Performance] Applied more aggressive compiling on the bootstrap.  Gives a little bit more
	  performance.
	* [Performance] Modified time is now used for local -> local file comparisons.  This is because mtime